--- a/mnist/gan_mnist_pretrained_load.ipynb
+++ b/mnist/gan_mnist_pretrained_load.ipynb
@@ -20,22 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gan_mnist\n",
-    "D = gan_mnist.D\n",
-    "G = gan_mnist.G"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load the models\n",
+    "import gan_mnist\n",
+    "D = gan_mnist.D\n",
+    "G = gan_mnist.G\n",
+    "\n",
+    "# load weights\n",
     "D.load_state_dict(torch.load('weights/D--300.ckpt'))\n",
     "G.load_state_dict(torch.load('weights/G--300.ckpt'))\n",
     "if torch.cuda.is_available():\n",
