put models in eval mode

--- a/classifiers/cifar/cifar_pretrained_load.ipynb
+++ b/classifiers/cifar/cifar_pretrained_load.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "net = model.cifar10(128, pretrained='log/cifar10/best-135.pth')  \n",
+    "net = model.cifar10(128, pretrained='log/cifar10/best-135.pth').eval()  \n",
     "net = net.to(device)"
    ]
   }
