--- a/classifiers/mnist/lenet_pretrained_load.ipynb
+++ b/classifiers/mnist/lenet_pretrained_load.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "net = LeNet5()\n",
+    "net = LeNet5().eval()\n",
     "net.load_state_dict(torch.load('weights/lenet_epoch=12_test_acc=0.991.pth'))\n",
     "net = net.to(device)"
    ]
