--- a/cifar100_dcgan_grayscale/dcgan_cifar100_pretrained_load.ipynb
+++ b/cifar100_dcgan_grayscale/dcgan_cifar100_pretrained_load.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
     "# load the models\n",
     "from dcgan import Discriminator, Generator\n",
     "\n",
-    "D = Discriminator(ngpu=1)\n",
-    "G = Generator(ngpu=1)\n",
+    "D = Discriminator(ngpu=1).eval()\n",
+    "G = Generator(ngpu=1).eval()\n",
     "\n",
     "# load weights\n",
     "D.load_state_dict(torch.load('weights/netD_epoch_299.pth'))\n",
@@ -142,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
