--- a/cifar10_dcgan/dcgan_cifar10_pretrained_load.ipynb
+++ b/cifar10_dcgan/dcgan_cifar10_pretrained_load.ipynb
@@ -31,8 +31,8 @@
     "# load the models\n",
     "from dcgan import Discriminator, Generator\n",
     "\n",
-    "D = Discriminator(ngpu=1)\n",
-    "G = Generator(ngpu=1)\n",
+    "D = Discriminator(ngpu=1).eval()\n",
+    "G = Generator(ngpu=1).eval()\n",
     "\n",
     "# load weights\n",
     "D.load_state_dict(torch.load('weights/netD_epoch_199.pth'))\n",
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
